<resources>
    <string name="app_name">About Me</string>
    <string name="hello_android">Hello Android</string>
    <string name="yellow_start">Yellow Start</string>
    <string name="bio">
        Experiment with adding an ImageView above the TextView inside the ScrollView. When you run the app, this image, unlike the star, will scroll out of view as the text scrolls up.
\n\n
Hint: You will need to wrap the two scrollable views into a LinearLayout inside the ScrollView. ScrollView > LinerLayout > ImageView + TextView
\n\n
Below is a skeleton code version for this challenge.
\n\n
The important thing to remember is that since ScrollView can only have one child, you have to wrap that ImageView and the TextView into a LinearLayout.
\n\n
There is no solution code provided for this challenge, but the skeleton code below gives you the expected view hierarchy to use.
\n\n
SKELETON code of view hierarchy:Experiment with adding an ImageView above the TextView inside the ScrollView. When you run the app, this image, unlike the star, will scroll out of view as the text scrolls up.
\n\n
Hint: You will need to wrap the two scrollable views into a LinearLayout inside the ScrollView. ScrollView > LinerLayout > ImageView + TextView
\n\n
Below is a skeleton code version for this challenge.
\n\n
The important thing to remember is that since ScrollView can only have one child, you have to wrap that ImageView and the TextView into a LinearLayout.
\n\n
There is no solution code provided for this challenge, but the skeleton code below gives you the expected view hierarchy to use.
\n\n
SKELETON code of view hierarchy:
        Experiment with adding an ImageView above the TextView inside the ScrollView. When you run the app, this image, unlike the star, will scroll out of view as the text scrolls up.
\n\n
Hint: You will need to wrap the two scrollable views into a LinearLayout inside the ScrollView. ScrollView > LinerLayout > ImageView + TextView
\n\n
Below is a skeleton code version for this challenge.
\n\n
The important thing to remember is that since ScrollView can only have one child, you have to wrap that ImageView and the TextView into a LinearLayout.
\n\n
There is no solution code provided for this challenge, but the skeleton code below gives you the expected view hierarchy to use.
\n\n
SKELETON code of view hierarchy:
        Experiment with adding an ImageView above the TextView inside the ScrollView. When you run the app, this image, unlike the star, will scroll out of view as the text scrolls up.
\n\n
Hint: You will need to wrap the two scrollable views into a LinearLayout inside the ScrollView. ScrollView > LinerLayout > ImageView + TextView
\n\n
Below is a skeleton code version for this challenge.
\n\n
The important thing to remember is that since ScrollView can only have one child, you have to wrap that ImageView and the TextView into a LinearLayout.
\n\n
There is no solution code provided for this challenge, but the skeleton code below gives you the expected view hierarchy to use.
\n\n
SKELETON code of view hierarchy:
    </string>
    <string name="your_nickname">Your Nickname</string>
    <string name="done">Done</string>
</resources>
