<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding"
        tools:context=".MainActivity"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_android"
            android:textAlignment="center"
            style="@style/Name_Style" />

        <EditText
            android:id="@+id/nickname_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            style="@style/Name_Style"
            android:textAlignment="center"
            android:inputType="textPersonName"
            android:hint="@string/your_nickname" />

        <Button

            android:layout_margin="@dimen/margin"
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:fontFamily="@font/roboto"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_gravity="center_horizontal"


            />

        <TextView
            android:id="@+id/nickname_textView"
            style="@style/Name_Style"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/star_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/yellow_start"
            android:layout_marginTop="10dp" />

        <ScrollView
            android:layout_marginTop="@dimen/margin"
            android:id="@+id/bio_scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/Name_Style"
                android:id="@+id/bio_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bio"
                android:lineSpacingMultiplier="1.2" />

        </ScrollView>


    </LinearLayout>
</layout>